Re-worked old version of the Etch-a-Sketch project with grids, and even-listeners.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,27 @@
 </head>
 
 <body>
-    <div class = "container">
-
+    <div class="header">
+        <h1>Welcome</h1>
+        <h3>Pick your color and get drawing</h3>
+    </div>
+    <div class="Canvas-Control">
+        <div class="control">
+            <p>Control Goes Here</p>
+            <p>Control Goes Here</p>
+            <p>Control Goes Here</p>
+        </div>
+        <div class = "container">
+            <div class="cell">Hello</div>
+            <div class="cell">Hello</div>
+            <div class="cell">Hello</div>
+            <div class="cell">Hello</div>
+            <div class="cell">Hello</div>
+            <div class="cell">Hello</div>
+            <div class="cell">Hello</div>
+            <div class="cell">Hello</div>
+            <div class="cell">Hello</div>
+        </div>
     </div>
 </body>
 </html>
