Reworked the drawing pad to be a grid.

--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
     </div>
     <div class="Canvas-Control">
         <div class="control">
-            <p>Control Goes Here</p>
-            <p>Control Goes Here</p>
-            <p>Control Goes Here</p>
+            <p>Adjust grid size</p>
+            <span id="display"></span>
+            <input type="range" id="range" class="slider" min="8" max="64" value="8">
+            
         </div>
         <div class = "container">
-            <div class="cell">Hello</div>
-            <div class="cell">Hello</div>
-            <div class="cell">Hello</div>
-            <div class="cell">Hello</div>
-            <div class="cell">Hello</div>
-            <div class="cell">Hello</div>
-            <div class="cell">Hello</div>
-            <div class="cell">Hello</div>
-            <div class="cell">Hello</div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
         </div>
     </div>
 </body>
